# codex-usage-monitor

./: .gitignore  AGENTS.md  README.md  README_zh.md  codex-backend.spec  pyproject.toml
.conda/conda-meta/: bzip2-1.0.8-h2bbff1b_6.json  ca-certificates-2026.5.14-haa95532_0.json  history  libexpat-2.8.1-hd7fb8db_0.json  libffi-3.4.8-h2b21627_2.json  libzlib-1.3.2-h1c6eee0_0.json  openssl-3.5.7-hbb43b14_0.json  packaging-26.0-py311haa95532_0.json  pip-26.1.1-pyhc872135_1.json  python-3.11.15-hb00fc5c_1.json  setuptools-82.0.1-py311haa95532_0.json  sqlite-3.53.2-hee5a0db_0.json  tk-8.6.15-hf199647_0.json  tzdata-2026b-he532380_0.json  ucrt-10.0.22621.0-haa95532_0.json  vc-14.3-h2df5915_12.json  vc14_runtime-14.44.35208-h4927774_12.json  vs2015_runtime-14.44.35208-ha6b5a95_12.json  wheel-0.46.3-py311haa95532_0.json  xz-5.8.2-h53af0af_0.json  zlib-1.3.2-h1c6eee0_0.json
.conda/etc/: aau_token
app/: config.py  gui.py  logging_config.py  main.py  models.py
app/analytics/: burn_rate.py  events.py  forecast.py
app/collectors/: base.py  log_collector.py  quota_collector.py
app/scheduler/: poller.py
app/server/: api.py  schemas.py  static_dashboard.py
app/storage/: db.py  migrations.py  repository.py
scripts/: check_quota.py  dev_collect_once.py  export_csv.py  reset_model_data.py
tests/: test_config.py  test_log_collector.py  test_quota_collector.py  test_repository.py
